[project]
name = "rawforge" 
version = "0.0.1"
description = "A compute backend/CLI application for using machine learning models on raw images."
authors = [
    { name = "Ryan Mueller"},
]
readme = "README.md"
requires-python = ">=3.11" 
license = { file = "LICENSE" }
keywords = ["python", "Machine Learning", "Camera Raw"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "numpy >=2.3", 
    "RawHandler ~=0.0.2",
    "colour_demosaicing ~=0.2.6",
    "blended_tiling >=0.0.1.dev7",
    "requests ~=2.32",
    "platformdirs ~=4.5",
    "tqdm ~=4.67",
    "cryptography ~=46.0",
    "tifffile",
    "onnxruntime"
]


[project.urls]
"Homepage" = "https://github.com/rymuelle/RawForge"
"Bug Tracker" = "https://github.com/rymuelle/RawForge/issues"

[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta" 

[tool.setuptools.packages.find]
where = ["."]
include = ["RawForge*"]

[project.scripts]
rawforge = "RawForge.main:main"


python3.12 -m venv test_tiffile
. test_tiffile/bin/activate
git clone -b feature_save_with_tifffile https://github.com/rymuelle/RawForge.git
pip install RawForge/.
rawforge TreeNetDenoiseSuperLight test.CR2 test.dng --cfa

 1030  ls
 1031  ls *.cr2
 1032  ls -lrt
 1033  rawforge -h
 1034  rawforge TreeNetDenoiseSuperLight test.CR2 test.dng --cfa
 1035  ls *.CR2
 1036  cp IMG_1238.CR2 test.CR2
 1037  rawforge TreeNetDenoiseSuperLight test.CR2 test.dng --cfa
 1038  deactivate
 1039  ls
 1040  rm -rf RawForge
 1041  rm -rf test_tiffile/
